<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_simple_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_simple_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:text="@string/simple_view"/>

            <ToggleButton
                android:id="@+id/tb_simple_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:textSize="26sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cv_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_simple_toggle"
        app:layout_constraintVertical_bias="0.25"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="48sp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="25dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/ll_search_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center">

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/et_city_input"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/search_hint"
                android:inputType="text"
                tools:ignore="InefficientWeight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/et_city_input"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>